correct publication/origin conditional element labels and override bootstrap text overflow on labels fixes CARNEGIE-233 fixes CARNEGIE-234

--- a/app/assets/stylesheets/dcv/dcv.css.scss
+++ b/app/assets/stylesheets/dcv/dcv.css.scss
@@ -1215,6 +1215,15 @@ h2[itemprop="name"] {
 		}
 	}
 }
+#child_items {
+	.inner {
+		.dl-horizontal {
+			dt {
+				text-overflow: clip;
+			}
+		}
+	}
+}
 
 
 /* MediaElement player */
